--- a/_posts/2014-06-28-结构体与类的区别.md
+++ b/_posts/2014-06-28-结构体与类的区别.md
@@ -5,7 +5,7 @@ date:   2014-06-28 16:14:09 +0800
 categories: c++
 ---
 
-##结构体与类的区别（C++）
+**结构体与类的区别（C++）**
 结构体和类都是提供了数据的封装和构造 
 结构体主要是c语言的特色
 类是c++的基本机制 
