--- a/_posts/2014-11-28-对于65535问题的思考.md
+++ b/_posts/2014-11-28-对于65535问题的思考.md
@@ -4,6 +4,6 @@ title:  "对于65535问题的思考"
 date:   2014-11-28 16:14:09 +0800
 categories: Android
 ---
-##对于65535问题的思考
+**对于65535问题的思考**
 Android为什么方法数不能超过65535  
 言归正传，来聊聊为什么方法数不能超过65535？搬上Dalvik工程师在SF上的回答，因为在Dalvik指令集里，调用方法的invoke-kind指令中，method reference index只给了16bits，最多能调用65535个方法，所以在生成dex文件的过程中，当方法数超过65535就会报错。细看指令集，除了method，field和class的index也是16bits，所以也存在65535的问题。一般来说，method的数目会比field和class多，所以method数会首先遇到65535问题，你可能都没机会见到field过65535的情况。
