--- a/_posts/2017-9-21-内存优化-理论篇.md
+++ b/_posts/2017-9-21-内存优化-理论篇.md
@@ -4,7 +4,7 @@ title:  "内存优化-理论篇"
 date:   2017-9-21 16:14:09 +0800
 categories: Android
 ---
-##内存优化理论基础
+**内存优化理论基础**  
 最近对公司的的app进行内存优化，使用了LeakCanary检测出内存泄漏后，我居然一个下才解决了两个内存泄漏，原因有：         
 
 1.对代码熟悉程度不足（做内存优化时候，被优化的代码大多数不是自己写的）  
@@ -16,8 +16,8 @@ categories: Android
 综上所述，栈(stack)可以自行清除不用的内存空间。但是如果我们不停的创建新对象，堆(heap)的内存空间就会被消耗尽。所以JAVA引入了垃圾回收(garbage collection，简称GC)去处理堆内存的回收，但如果对象一直被引用无法被回收，造成内泄漏的原因。
 而且我们android手机的内存比较小，万一内存泄漏比较严重，app会崩也是必然的。
 
-##常见场合：
-###Static Activities
+***常见场合：***  
+**Static Activities**
 在类中定义了静态Activity变量，把当前运行的Activity实例赋值于这个静态变量。
 如果这个静态变量在Activity生命周期结束后没有清空，就导致内存泄漏。因为static变量是贯穿这个应用的生命周期的，所以被泄漏的Activity就会一直存在于应用的进程中，不会被垃圾回收器回收。
 
@@ -36,7 +36,7 @@ categories: Android
 
 整个Activity都泄漏了，很严重如果该Activity是MainActivity，那么泄漏个10+M也是理所当然的。
 
-###Static Views
+**Static Views**  
 类似的情况会发生在单例模式中，如果Activity经常被用到，那么在内存中保存一个实例是很实用的。正如之前所述，强制延长Activity的生命周期是相当危险而且不必要的，无论如何都不能这样做。
 
 特殊情况：如果一个View初始化耗费大量资源，而且在一个Activity生命周期内保持不变，那可以把它变成static，加载到视图树上(View Hierachy)，像这样，当Activity被销毁时，应当释放资源。（译者注：示例代码中并没有释放内存，把这个static view置null即可，但是还是不建议用这个static view的方法）
@@ -55,7 +55,7 @@ categories: Android
       }
     });
 
-###Inner Classes
+**Inner Classes**  
 继续，假设Activity中有个内部类，这样做可以提高可读性和封装性。将如我们创建一个内部类，而且持有一个静态变量的引用，恭喜，内存泄漏就离你不远了
 
      private static Object inner;
@@ -75,7 +75,7 @@ categories: Android
     });
 内部类的优势之一就是可以访问外部类，不幸的是，导致内存泄漏的原因，就是内部类持有外部类实例的强引用。
 
-###Anonymous Classes
+**Anonymous Classes**  
 相似地，匿名类也维护了外部类的引用。所以内存泄漏很容易发生，当你在Activity中定义了匿名的AsyncTsk
 。当异步任务在后台执行耗时任务期间，Activity不幸被销毁了，这个被AsyncTask持有的Activity实例就不会被垃圾回收器回收，直到异步任务结束。
 
@@ -97,7 +97,7 @@ categories: Android
         }
     });
 
-###Handler
+**Handler**
 
 同样道理，定义匿名的Runnable，用匿名类Handler执行。Runnable内部类会持有外部类的隐式引用，被传递到Handler的消息队列MessageQueue中，在Message消息没有被处理之前，Activity实例不会被销毁了，于是导致内存泄漏。
 
@@ -122,7 +122,7 @@ categories: Android
         }
     });
 
-###Threads
+**Threads**  
 我们再次通过Thread和TimerTask来展现内存泄漏
 
     void spawnThread() {
@@ -141,7 +141,7 @@ categories: Android
       }
     });
 
-###TimerTask
+**TimerTask**  
 只要是匿名类的实例，不管是不是在工作线程，都会持有Activity的引用，导致内存泄漏。
 
     void scheduleTimer() {
@@ -160,7 +160,7 @@ categories: Android
             nextActivity();
         }
     });
-###Sensor Manager
+**Sensor Manager**  
 最后，通过Context.getSystemService(int name)可以获取系统服务。这些服务工作在各自的进程中，帮助应用处理后台任务，处理硬件交互。如果需要使用这些服务，可以注册监听器，这会导致服务持有了Context的引用，如果在Activity销毁的时候没有注销这些监听器，会导致内存泄漏。
 
      void registerListener() {
@@ -177,7 +177,7 @@ categories: Android
             }
         });
 
-###总结
+**总结**  
 看过那么多会导致内存泄漏的例子，容易导致吃光手机的内存使垃圾回收处理更为频发，甚至最坏的情况会导致OOM。垃圾回收的操作是很昂贵的开销，会导致肉眼可见的卡顿。所以，实例化的时候注意持有的引用链，并经常进行内存泄漏检查
 
 
