--- a/_posts/2017-9-20-内存优化-框架篇.md
+++ b/_posts/2017-9-20-内存优化-框架篇.md
@@ -29,17 +29,27 @@ github地址：https://github.com/square/leakcanary
 流血现场：![](https://i.imgur.com/sNZGyWt.png)
 
 好吧，我们去解决问题  
-第一个问题（待解决）  
+第一个问题  
 ![](https://i.imgur.com/lPlDi6B.png)
 
-很明显没有对handle与mTask进行释放  
+很明显没有对handle进行释放  
 
-      public void cancel() {
-            if (mTask != null) {
-                mTask.cancel();
-                mTask = null;
+      private static class MyTask extends TimerTask {
+            private Handler handler;
+
+            public MyTask(Handler handler) {
+                this.handler = handler;
+            }
+
+            @Override
+            public void run() {
+                handler.obtainMessage().sendToTarget();
+            }
+
+            @Override
+            public boolean cancel() {
                 handler = null;
-                mTask = null;
+                return super.cancel();
             }
         }
 
@@ -128,3 +138,19 @@ github地址：https://github.com/square/leakcanary
 
 把XML的webview去了然后加入linearlayout.  
 
+
+第五个案例：
+一个21M的内存泄漏，足以让所有人震惊！！
+![](https://i.imgur.com/QLRwAIU.png)
+![](https://i.imgur.com/QGawhIF.png)
+而且发生频率很高，发送场景大多数是我退出APP后。然后Andorid系统去删回收资源然后报出来的问题，会导致我们的项目比较容易让Android系统回收。为什么呢（Android系统回收资源中的规则是当资源比较紧急的情况下优先去回收一些优先级比较低的，占用内存比较大的线程资源，那么不回收你回收谁啊）  
+内存泄漏如此巨大原因在于：MainActivity内存泄漏了
+![](https://i.imgur.com/UqWLJ4f.png)  
+这里的Listener是静态的  
+然后我们源码是如何去设置这个Listener
+![](https://i.imgur.com/NNa70il.png)  
+然后我们是匿名对象去实现的这个Listener的接口
+这说明了什么!
+Listener是MainActivity里面的匿名对象，而且这个对象（static的Listener）的生命周期很长，那么我想问Activity的生命周期也必定好长是不是！！解决方法：
+![](https://i.imgur.com/Eh4Iz6P.png)
+让我们的Activity去实现这个接口，由于这个Listener是static的我们需要在Activity#onDestroy对Listener = null处理
