--- a/_posts/2017-9-20-内存优化-框架篇.md
+++ b/_posts/2017-9-20-内存优化-框架篇.md
@@ -85,7 +85,7 @@ github地址：https://github.com/square/leakcanary
 ![](https://i.imgur.com/pDKV8t3.png)  
 
 
-第四个案发现场  
+第四个案发现场  （这个问题，我单独拿出来）
 我也是感觉这个比较有价值：webview的内存泄漏  
 对与webview的出来 详情看这里 http://www.cnblogs.com/hnrainll/p/4309792.html  
 大概这样子的对与webview开一个线程处理。当activity退出的时候，线程退出  
