--- a/_posts/2017-9-21-内存优化-理论篇.md
+++ b/_posts/2017-9-21-内存优化-理论篇.md
@@ -72,12 +72,12 @@ categories: Android
             createInnerClass();
             nextActivity();
         }
-    });
-内部类的优势之一就是可以访问外部类，不幸的是，导致内存泄漏的原因，就是内部类持有外部类实例的强引用。
+    });  
+内部类的优势之一就是可以访问外部类，不幸的是，导致内存泄漏的原因，就是非静态内部类/对象(隐式)持有外部类实例的强引用。
 
 **Anonymous Classes**  
 相似地，匿名类也维护了外部类的引用。所以内存泄漏很容易发生，当你在Activity中定义了匿名的AsyncTsk
-。当异步任务在后台执行耗时任务期间，Activity不幸被销毁了，这个被AsyncTask持有的Activity实例就不会被垃圾回收器回收，直到异步任务结束。
+。当异步任务在后台执行耗时任务期间，Activity不幸被销毁了，这个被AsyncTask持有的Activity实例就不会被垃圾回收器回收，直到异步任务结束。  匿名对象也持有外部类的引用
 
     void startAsyncTask() {
         new AsyncTask<Void, Void, Void>() {
