--- a/_posts/2017-9-27-图片压缩之共鸣.md
+++ b/_posts/2017-9-27-图片压缩之共鸣.md
@@ -9,4 +9,29 @@ categories: Android
 [http://blog.csdn.net/u012400885/article/details/72235451](http://blog.csdn.net/u012400885/article/details/72235451)  
 那时候我已经把demo做好了  
 [https://github.com/weisente/ImgCompressComparison-master](https://github.com/weisente/ImgCompressComparison-master)  
-大家就看看吧，我后期会补充！！
+大家就看看吧。
+然后我总结一下：  
+在Android设备中，图片有如下三种存在形式  
+1.在硬盘上时，图片展现的方式是File；     
+2.在网络传输时，图片展现的方式是Stream；  
+3.在内存中，图片展现的方式是Stream或Bitmap。  
+**常见压缩**  
+1.质量压缩  
+主要通过
+    
+    image.compress(Bitmap.CompressFormat.JPEG, options, baos);
+来实现，从结果上来说他对File做出影响，它是在保持像素的前提下改变图片的位深及透明度等，来达到压缩图片的目的。因为bitmap在内存中的大小是按像素计算的，也就是width * height，对于质量压缩，并不会改变图片的像素，所以就算质量被压缩了，但是bitmap在内存的占有率还是没变小，但你做成file时，它确实变小了。  
+2.尺寸压缩
+     
+    Bitmap.createBitmap(bmp.getWidth() / ratio, bmp.getHeight() / ratio, Bitmap.Config.ARGB_8888);
+
+通过指定ratio的尺寸的压缩大小来进行压缩，的确能做到File和bitmap的大小减少，比较图片的宽高都减少了。  
+3.采样率压缩
+在读取文件的时候，通过读取他的BitmapFactory.Options，然后设置采样的比例，避免了OOM。  
+4.
+
+
+
+比较新的方法(重点介绍！！！)
+https://www.zhihu.com/question/29355920
+	
