写一些最近研究的博客

--- a/_posts/2017-9-20-内存优化-框架篇.md
+++ b/_posts/2017-9-20-内存优化-框架篇.md
@@ -26,7 +26,8 @@ github地址：https://github.com/square/leakcanary
         LeakCanary.install(this);
     ｝
 
-流血现场：![](https://i.imgur.com/sNZGyWt.png)
+流血现场：
+![](https://i.imgur.com/sNZGyWt.png)
 
 好吧，我们去解决问题  
 第一个问题  
