--- a/_posts/2017-9-27-图片压缩之共鸣.md
+++ b/_posts/2017-9-27-图片压缩之共鸣.md
@@ -21,17 +21,48 @@ categories: Android
     
     image.compress(Bitmap.CompressFormat.JPEG, options, baos);
 来实现，从结果上来说他对File做出影响，它是在保持像素的前提下改变图片的位深及透明度等，来达到压缩图片的目的。因为bitmap在内存中的大小是按像素计算的，也就是width * height，对于质量压缩，并不会改变图片的像素，所以就算质量被压缩了，但是bitmap在内存的占有率还是没变小，但你做成file时，它确实变小了。  
+
 2.尺寸压缩
      
     Bitmap.createBitmap(bmp.getWidth() / ratio, bmp.getHeight() / ratio, Bitmap.Config.ARGB_8888);
 
-通过指定ratio的尺寸的压缩大小来进行压缩，的确能做到File和bitmap的大小减少，比较图片的宽高都减少了。  
+通过指定ratio的尺寸的压缩大小来进行压缩，的确能做到File和bitmap的大小减少，比较图片的宽高都减少了。
+  
 3.采样率压缩
 在读取文件的时候，通过读取他的BitmapFactory.Options，然后设置采样的比例，避免了OOM。  
-4.
+
+4.Luban压缩
+利用了Rxjava，对图片的不同需求进行了设置，底层是调用
+    
+    tagBitmap.compress(Bitmap.CompressFormat.JPEG, 60, stream);
+
+这里还是调用了原生的API，主要核心在与怎么样控制压缩比例的策略
+	 
+	private int computeSize() {
+    srcWidth = srcWidth % 2 == 1 ? srcWidth + 1 : srcWidth;
+    srcHeight = srcHeight % 2 == 1 ? srcHeight + 1 : srcHeight;
+
+    int longSide = Math.max(srcWidth, srcHeight);
+    int shortSide = Math.min(srcWidth, srcHeight);
+
+    float scale = ((float) shortSide / longSide);
+    if (scale <= 1 && scale > 0.5625) {
+      if (longSide < 1664) {
+        return 1;
+      } else if (longSide >= 1664 && longSide < 4990) {
+        return 2;
+      } else if (longSide > 4990 && longSide < 10240) {
+        return 4;
+      } else {
+        return longSide / 1280 == 0 ? 1 : longSide / 1280;
+      }
+    } else if (scale <= 0.5625 && scale > 0.5) {
+      return longSide / 1280 == 0 ? 1 : longSide / 1280;
+    } else {
+      return (int) Math.ceil(longSide / (1280.0 / scale));
+    }
+  	}
 
 
 
-比较新的方法(重点介绍！！！)
-https://www.zhihu.com/question/29355920
 	
